[package]
name = "ferrite"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
windows = { version = "0.59.0", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug_Extensions",
] }
thiserror = "2.0.11"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
anyhow = "1.0"